k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Rewrite url target to / only
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # Update Annotation
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: true
spec:
  tls:
    - hosts:
        - multi-k8s-frontend.quik-studio.com
      secretName: "multi-k8s-frontend.quik-studio-com"
  rules:
    # Duplicate the entire block for www, then change the host to www prefix
    - host: multi-k8s-frontend.quik-studio.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
